[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "falconapi"
version = "0.1.0"
[tool.poetry.dependencies]
falcon = "^2.0"
python = "^3.7"
flask = "^1.1"
[tool.poetry.dev-dependencies]
